kubernetes-deploy/cluster-bundle/manifests-local-openvre/manifest/networkpolicy-frontend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: dashboard-keycloak
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app: dashboard-mongodb
    ports:
    - protocol: TCP
      port: 27017
  - to:
    - podSelector:
        matchLabels:
          app: dashboard-sgecore
    ports:
    - protocol: TCP
      port: 6444
  - to:
    - podSelector:
        matchLabels:
          app: scheduler
    ports:
    - protocol: TCP
      port: 8080
  - ports:
    - protocol: TCP
      port: 443
